--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,3 +1,8 @@
+# Applies to both connect & read portions of the request, so this means each
+# request could potentially take up to double the value specified here.
+requests_timeout_seconds: 5
+# WAN IP API URL
+wanip_endpoint: 'https://ip4.seeip.org/'
 # name.com API
 api_host: 'api.name.com'
 username: 'whatever@example.com'
