--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,6 +3,7 @@
 requests_timeout_seconds: 5
 # WAN IP API URL
 wanip_endpoint: 'https://ip4.seeip.org/'
+wanip_retry_limit: 5
 # name.com API
 api_host: 'api.name.com'
 username: 'whatever@example.com'
