--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,9 +1,9 @@
 # Applies to both connect & read portions of the request, so this means each
 # request could potentially take up to double the value specified here.
 requests_timeout_seconds: 5
+getreq_retry_limit: 5
 # WAN IP API URL
 wanip_endpoint: 'https://ip4.seeip.org/'
-wanip_retry_limit: 5
 # name.com API
 api_host: 'api.name.com'
 username: 'whatever@example.com'
