--- a/config.example.yaml
+++ b/config.example.yaml
@@ -2,7 +2,7 @@ log_level: DEBUG
 # Use this alternative format for more helpful dev logging:
 # [%(asctime)s] %(levelname)s:%(name)s [%(funcName)s:%(lineno)d] %(message)s
 log_format: "%(levelname)s:%(name)s:%(message)s"
-log_datefmt: '%Y-%m-%dT%H:%M:%S'
+log_datefmt: '%Y-%m-%dT%H:%M:%S.%f'
 # Applies to both connect & read portions of the request, so this means each
 # request could potentially take up to double the value specified here.
 requests_timeout_seconds: 5
