--- a/dynip.service
+++ b/dynip.service
@@ -5,7 +5,7 @@ After=network.target nss-lookup.target
 
 [Service]
 Type=oneshot
-ExecStart=$DYNDNS_WORKING_DIR/dynip.py
+ExecStart=/bin/sh -c 'exec $DYNDNS_WORKING_DIR/dynip.py'
 
 [Install]
 WantedBy=multi-user.target
