Change Systemd service unit's WantedBy value
This makes it work correctly when run as a user service

--- a/dynip.service
+++ b/dynip.service
@@ -8,4 +8,4 @@ Type=oneshot
 ExecStart=/bin/sh -c 'exec $DYNDNS_WORKING_DIR/dynip.py'
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
