--- a/dynip.service
+++ b/dynip.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dynamic IP DNS Update
-After=network.target nss-lookup.target
+After=network-online.target nss-lookup.target
 
 [Service]
 Type=oneshot
