--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,7 +8,7 @@ log_datefmt: '%Y-%m-%dT%H:%M:%S'
 requests_timeout_seconds: 5
 getreq_retry_limit: 5
 # WAN IP API URL
-wanip_endpoint: 'https://ip4.seeip.org/'
+wanip_endpoint: 'https://api.ipify.org?format=text'
 # name.com API
 api_host: 'api.name.com'
 username: 'whatever@example.com'
